cmake_minimum_required(VERSION 3.12)
project(xenon VERSION 2.3.0)
configure_file(config.h.in config.h)
enable_testing()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_BUILD_TYPE "Release")
if (NOT MSVC)
add_compile_options(-Wall -Wextra -Werror)
add_compile_options(-Wno-implicit-fallthrough)
add_compile_options(-fdiagnostics-color=always)
endif ()

include_directories(include)
include_directories(${CMAKE_BINARY_DIR}/include)
include_directories(src)

if (APPLE)
include_directories(SYSTEM "/usr/local/include")
endif (APPLE)

add_subdirectory(xspx)
add_subdirectory(src)
add_subdirectory(tools)
add_subdirectory(unit)
add_subdirectory(examples)
