decode_exe = executable('decode', 'decode.cpp', xddl_h,
    include_directories : [inc, xenon_inc],
    link_with : xenon_lib)

sibs_exe = executable('sibs', 'sibs.cpp', xddl_h,
    include_directories : inc,
    link_with : xenon_lib)

tut_exe = executable('tut', 'tutorial.cpp', xddl_h,
    include_directories : inc,
    link_with : xenon_lib)

tut2_exe = executable('tut2', 'tutorial2.cpp', xddl_h,
    include_directories : inc,
    link_with : xenon_lib)
