cmake_minimum_required(VERSION 2.8)
add_subdirectory(xddlunit)
add_subdirectory(bitstring)
add_subdirectory(itu)
add_subdirectory(xmlparse)
add_subdirectory(expression)
add_subdirectory(document)
add_subdirectory(script)
add_subdirectory(string64)
add_subdirectory(exception)

enable_testing()

